[gd_scene load_steps=16 format=3 uid="uid://q4004fv1dt1h"]

[ext_resource type="Texture2D" uid="uid://c2vqplxuwyoev" path="res://assets/pokemon/background/arena2.png" id="1_3uioy"]
[ext_resource type="Script" path="res://scripts/showDrawing.gd" id="2_jm0hw"]
[ext_resource type="Script" path="res://scripts/judge.gd" id="3_1v7ln"]
[ext_resource type="Texture2D" uid="uid://c2jly7l5hi332" path="res://assets/pokemon/judges/judge2.png" id="4_4bhdy"]
[ext_resource type="Script" path="res://scripts/combat.gd" id="5_4eet3"]
[ext_resource type="Texture2D" uid="uid://cqea5b544jyso" path="res://assets/pokemon/ui/menu_button.png" id="6_25geq"]
[ext_resource type="Theme" uid="uid://b32cisgucym7m" path="res://assets/pokemon/ui/battle.tres" id="7_0ianr"]

[sub_resource type="Animation" id="Animation_dgbjo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("drawing:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("drawing:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.61, 0.61)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("drawing:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_a5th3"]
resource_name = "player_attack"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("drawing:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.478212, 0.814762, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("drawing:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.61, 0.61), Vector2(0.8, 0.8), Vector2(1, 1), Vector2(0.61, 0.61)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("drawing:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(603.279, -277.049), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_nc0bf"]
resource_name = "player_damage"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("drawing:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -100), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("drawing:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.174533, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("drawing:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.61, 0.61), Vector2(0.8, 0.8), Vector2(0.61, 0.61)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ybww"]
_data = {
"RESET": SubResource("Animation_dgbjo"),
"player_attack": SubResource("Animation_a5th3"),
"player_damage": SubResource("Animation_nc0bf")
}

[sub_resource type="Animation" id="Animation_5q0cb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Judge1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Judge1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Judge1:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_5tagd"]
resource_name = "judge_attack"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Judge1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-700, 400), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Judge1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.195477, -0.349066, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Judge1:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 1.3), Vector2(1.7, 1.7), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_y2ibk"]
resource_name = "judge_hurt"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Judge1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 100), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Judge1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, -0.174533, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Judge1:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 1.3), Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oa5hb"]
_data = {
"RESET": SubResource("Animation_5q0cb"),
"judge_attack": SubResource("Animation_5tagd"),
"judge_hurt": SubResource("Animation_y2ibk")
}

[node name="battle" type="Node2D"]

[node name="bg" type="Sprite2D" parent="."]
scale = Vector2(4.1, 4.1)
texture = ExtResource("1_3uioy")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="player" type="Node2D" parent="."]
position = Vector2(-248, 129)

[node name="drawing" type="Node2D" parent="player"]
scale = Vector2(0.61, 0.61)
script = ExtResource("2_jm0hw")
drawColor = Color(1, 1, 1, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]
libraries = {
"": SubResource("AnimationLibrary_1ybww")
}

[node name="enemy" type="Node2D" parent="."]
position = Vector2(368, -144)
scale = Vector2(0.51, 0.51)
script = ExtResource("3_1v7ln")

[node name="Judge1" type="Sprite2D" parent="enemy"]
texture = ExtResource("4_4bhdy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy"]
libraries = {
"": SubResource("AnimationLibrary_oa5hb")
}

[node name="menu" type="Node2D" parent="."]
script = ExtResource("5_4eet3")
wintext = "Fish 2: Wow, I'm impressed. Go check with Fish 3."
losetext = "Fish 2: Fish 1 made a mistake letting you by."
nextLevel = "room3"

[node name="bg" type="Sprite2D" parent="menu"]
position = Vector2(239, 204)
scale = Vector2(5, 1.5)
texture = ExtResource("6_25geq")

[node name="initMenu" type="Node2D" parent="menu"]
visible = false

[node name="sellbutton" type="Node2D" parent="menu/initMenu"]

[node name="sell" type="Sprite2D" parent="menu/initMenu/sellbutton"]
modulate = Color(0.631373, 0.631373, 0.631373, 1)
position = Vector2(103, 205)
scale = Vector2(2.29, 1.32)
texture = ExtResource("6_25geq")

[node name="Button" type="Button" parent="menu/initMenu/sellbutton"]
offset_left = -25.0
offset_top = 129.0
offset_right = 230.0
offset_bottom = 277.0
theme = ExtResource("7_0ianr")
theme_override_font_sizes/font_size = 36
text = "Sell the 
Product!"
flat = true

[node name="dodgebutton" type="Node2D" parent="menu/initMenu"]

[node name="dodge" type="Sprite2D" parent="menu/initMenu/dodgebutton"]
modulate = Color(0.631373, 0.631373, 0.631373, 1)
position = Vector2(375, 205)
scale = Vector2(2.29, 1.32)
texture = ExtResource("6_25geq")

[node name="Button" type="Button" parent="menu/initMenu/dodgebutton"]
offset_left = 248.0
offset_top = 129.0
offset_right = 503.0
offset_bottom = 277.0
theme = ExtResource("7_0ianr")
theme_override_font_sizes/font_size = 36
text = "Dodge the
Question!"
flat = true

[node name="attackMenu" type="Node2D" parent="menu"]

[node name="attack1" type="Node2D" parent="menu/attackMenu"]
position = Vector2(1, 61)
scale = Vector2(1, 0.5)

[node name="sell" type="Sprite2D" parent="menu/attackMenu/attack1"]
modulate = Color(0.631373, 0.631373, 0.631373, 1)
position = Vector2(103, 205)
scale = Vector2(2.29, 1.32)
texture = ExtResource("6_25geq")

[node name="Button" type="Button" parent="menu/attackMenu/attack1"]
offset_left = -23.0
offset_top = 128.0
offset_right = 230.0
offset_bottom = 280.0
theme = ExtResource("7_0ianr")
theme_override_font_sizes/font_size = 36
text = "Attack 1"
flat = true

[node name="attack2" type="Node2D" parent="menu/attackMenu"]
position = Vector2(1, 61)
scale = Vector2(1, 0.5)

[node name="dodge" type="Sprite2D" parent="menu/attackMenu/attack2"]
modulate = Color(0.631373, 0.631373, 0.631373, 1)
position = Vector2(375, 205)
scale = Vector2(2.29, 1.32)
texture = ExtResource("6_25geq")

[node name="Button" type="Button" parent="menu/attackMenu/attack2"]
offset_left = 248.0
offset_top = 128.0
offset_right = 501.0
offset_bottom = 280.0
theme = ExtResource("7_0ianr")
theme_override_font_sizes/font_size = 36
text = "Attack 2"
flat = true

[node name="attack3" type="Node2D" parent="menu/attackMenu"]
position = Vector2(1, 142.235)
scale = Vector2(1, 0.5)

[node name="sell" type="Sprite2D" parent="menu/attackMenu/attack3"]
modulate = Color(0.631373, 0.631373, 0.631373, 1)
position = Vector2(103, 205)
scale = Vector2(2.29, 1.32)
texture = ExtResource("6_25geq")

[node name="Button" type="Button" parent="menu/attackMenu/attack3"]
offset_left = -23.0
offset_top = 129.53
offset_right = 230.0
offset_bottom = 281.53
theme = ExtResource("7_0ianr")
theme_override_font_sizes/font_size = 36
text = "Pep-Talk"
flat = true

[node name="attack4" type="Node2D" parent="menu/attackMenu"]
position = Vector2(1, 142.235)
scale = Vector2(1, 0.5)

[node name="dodge" type="Sprite2D" parent="menu/attackMenu/attack4"]
modulate = Color(0.631373, 0.631373, 0.631373, 1)
position = Vector2(375, 205)
scale = Vector2(2.29, 1.32)
texture = ExtResource("6_25geq")

[node name="Button" type="Button" parent="menu/attackMenu/attack4"]
offset_left = 248.0
offset_top = 129.53
offset_right = 501.0
offset_bottom = 281.53
theme = ExtResource("7_0ianr")
theme_override_font_sizes/font_size = 36
text = "Channel
The
Salesman"
flat = true

[node name="dodgeText" type="Node2D" parent="menu"]
visible = false

[node name="text" type="RichTextLabel" parent="menu/dodgeText"]
offset_left = -28.0
offset_top = 146.0
offset_right = 509.0
offset_bottom = 273.0
theme = ExtResource("7_0ianr")
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "[center]Text regarding the success of your dodge[/center]"

[connection signal="pressed" from="menu/initMenu/sellbutton/Button" to="menu" method="_on_attackmenu_clicked"]
[connection signal="pressed" from="menu/initMenu/dodgebutton/Button" to="menu" method="_on_dodge_clicked"]
[connection signal="pressed" from="menu/attackMenu/attack1/Button" to="menu" method="_on_attack_clicked"]
[connection signal="pressed" from="menu/attackMenu/attack2/Button" to="menu" method="_on_attack_clicked"]
[connection signal="pressed" from="menu/attackMenu/attack3/Button" to="menu" method="_on_defense_raised"]
[connection signal="pressed" from="menu/attackMenu/attack4/Button" to="menu" method="_on_attack_raised"]
